--- a/styles/style.css
+++ b/styles/style.css
@@ -285,8 +285,8 @@ body{
 
 /* bmi container starts here   */
 .bmi-container{
-  width: 85%;
-  margin:0 auto;
+  width: 100%;
+  margin-bottom: 100px;
 }
 .bmi-heding{
   width:600px;
@@ -296,6 +296,12 @@ body{
 .bmi-title{
   font-weight: 800;
   font-size: 2.5rem;
+}
+.bg-color{
+  width: 100%;
+  margin:0 auto;
+  background-color: rgb(34, 34, 34);
+  padding:50px 0px;
 }
 .bmi-description{
   color:rgba(239, 237, 232, 0.531);
@@ -319,9 +325,13 @@ td{
   color:rgba(239, 237, 232, 0.531);
 }
 .bmi-content{
+  width: 85%;
+  margin:0 auto;
   display: flex;
   justify-content: space-between;
   gap:20px;
+  
+
 }
 .bmi-calculator{
   width: 500px;
@@ -369,6 +379,60 @@ option{
 }
 /* bmi container ends here   */
 
+/* trainer container starts here  */
+.trainer-container{
+  width: 85%;
+  margin:0 auto;
+
+}
+.trainer-title-description{
+  text-align: center;
+  width: 450px;
+  margin:0 auto;
+}
+.trainer-title{
+  font-size: 2.2rem;
+  font-weight: 800;
+}
+.trainer-description{
+  font-size: 0.7rem;
+  margin-top: 10px;
+  color:rgba(255, 255, 255, 0.5);
+}
+.img-section{
+  position: relative;
+}
+.trainer-img{
+  width: 290px ;
+  height: 250px;
+  border-radius: 15px;
+  object-fit: cover;
+  opacity: 0.7;
+  padding-left: 8px;
+}
+.trainer-content{
+  background-color: rgba(255, 255, 255, 0.128);
+  margin-top:70px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap:15px;
+  padding:18px;
+  border-radius:18px;
+}
+.name-position{
+  position: absolute;
+  top:200px;
+  left:20px;
+}
+.name{
+  font-weight: 800;
+  font-size: 1rem;
+}
+.position{
+  color:rgba(255, 255, 255, 0.5);
+  font-size: 0.8rem;
+}
+/* trainer container ends here  */
 /* small device responsive media starts here  */
 @media screen and (max-width:576px) {
   .menu-items{
@@ -409,6 +473,9 @@ option{
   .run-img{
     margin-top: 50px;
   }
+  .bmi-heding{
+    margin-left: 30px;
+  }
   .bmi-description{
     width: 50%;
   }
@@ -418,8 +485,16 @@ option{
   .bmi-calculator{
     width: 100%;
   }
+  .trainer-content{
+    grid-template-columns:repeat(1,1fr);
+    place-items: center;
+
+  }
+  .hide-img{
+    display: none;
+  }
 }
-/* phone responsive media ends here  */
+/* small device responsive media ends here  */
 
 /* medium device responsive media starts here */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -440,6 +515,13 @@ option{
   }
   .bmi-calculator{
     width: 100%;
+  }
+  .trainer-content{
+    grid-template-columns: repeat(3,1fr);
+  }
+  .trainer-img{
+    width: 190px;
+    height: 270px;
   }
 }
 /* medium device responsive media ends here */
