--- a/styles/style.css
+++ b/styles/style.css
@@ -433,6 +433,57 @@ option{
   font-size: 0.8rem;
 }
 /* trainer container ends here  */
+
+  /* footer section style starts here */
+  .footer-container{
+    background-color: rgba(255, 255, 255, 0.128);
+    margin-top: 70px;
+    margin-bottom: 50px;
+  }
+  .footer-content{
+    width: 85%;
+    margin:0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding:60px 0px;
+  }
+  .logo{
+    width: 50%;
+  }
+  .footer-description{
+    color:rgba(255, 255, 255, 0.5);
+    margin-top: 20px;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
+
+  }
+  .get-started{
+    margin-bottom: 30px;
+  }
+   .contact>ul> li{
+    list-style: none;
+    margin-top:13px;
+   }
+   .contact>ul> li > a{
+    text-decoration: none;
+    color:rgba(255, 255, 255, 0.5);
+    
+   }
+   .hr{
+    width: 85%;
+    margin:0 auto;
+    margin-top: 10px;
+    border-color: rgba(255, 255, 255, 0.1);
+   }
+   .copy{
+    width:85%;
+    margin:0 auto;
+    text-align: center;
+    margin-top: 30px;
+    padding-bottom: 20px;
+    color:rgba(255, 255, 255, 0.5);
+   }
+  /* footer section style ends here */
 /* small device responsive media starts here  */
 @media screen and (max-width:576px) {
   .menu-items{
@@ -492,6 +543,15 @@ option{
   }
   .hide-img{
     display: none;
+  }
+  .footer-content{
+    flex-direction: column;
+  }
+  .footer-description {
+    margin-bottom:20px ;
+  }
+  .contact{
+    margin-bottom: 25px;
   }
 }
 /* small device responsive media ends here  */
