some responsive problem solve

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,11 +63,11 @@ body{
 /* btn section ends */
 
 /* nav items style starts */
-/* header{
-    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0.321) 100%);
+header{
+    background: linear-gradient(0deg, rgb(17, 17, 17),rgba( 119, 119, 119, 0.321));
     width: 100%;
     padding-top: 20px;
-} */
+}
 .nav-banner-container{
     width: 85%;
     margin: 0 auto;
@@ -540,6 +540,9 @@ option{
     grid-template-columns:repeat(1,1fr);
     place-items: center;
 
+  }
+  .trainer-title-description{
+    width: 85%;
   }
   .hide-img{
     display: none;
