--- a/styles/style.css
+++ b/styles/style.css
@@ -276,10 +276,16 @@ header{
   margin-top: 13px;
   margin-bottom: 30px;
 }
+/* .run-img-container{
+  width: 400px;
+  background-color: red;
+} */
 .run-img{
-  width:366px;
-  height:312px;
+  width:300px;
+  height:280px;
   border-radius: 18px;
+  object-fit: cover;
+  object-position: 80% 100% ;
 }
 /* run container ends here  */
 
@@ -489,6 +495,9 @@ option{
   .menu-items{
     display: none;
   }
+  .btn-2 , .btn-1{
+    width: 170px;
+  }
   .banner-container{
     flex-direction: column;
     width: 100%;
@@ -523,8 +532,11 @@ option{
   }
   .run-img{
     margin-top: 50px;
+    object-fit: fill;
+    width: 100%;
   }
   .bmi-heding{
+    width: 90%;
     margin-left: 30px;
   }
   .bmi-description{
@@ -572,6 +584,22 @@ option{
     grid-template-columns: repeat(2, 1fr);
     place-items: center;
     
+  }
+.run-title{
+  font-size: 2rem;
+}
+.run-description{
+width: 70%;
+}
+  .run-img{
+    margin-top: 50px;
+    object-fit:cover;
+    width:256px;
+    height:312px;
+  }
+  .bmi-heding{
+    width: 100%;
+    margin-left: 20px;
   }
   .bmi-content{
     flex-direction: column;
