--- a/styles/style.css
+++ b/styles/style.css
@@ -222,8 +222,6 @@ header{
     
 }
 .habit-img-container{
-    /* display: flex;
-    justify-content: space-between; */
     align-items: center;
     margin-bottom: 105px;
     display: grid;
@@ -249,6 +247,7 @@ header{
     color:rgba(239, 237, 232, 0.531);
 }
 /* habits container section ends here  */
+
 /* run container starts here  */
 .run-container{
   width:85%;
@@ -276,10 +275,6 @@ header{
   margin-top: 13px;
   margin-bottom: 30px;
 }
-/* .run-img-container{
-  width: 400px;
-  background-color: red;
-} */
 .run-img{
   width:300px;
   height:280px;
@@ -336,8 +331,6 @@ td{
   display: flex;
   justify-content: space-between;
   gap:20px;
-  
-
 }
 .bmi-calculator{
   width: 500px;
@@ -354,31 +347,28 @@ td{
   color:rgba(239, 237, 232, 0.531);
   margin-bottom: 30px;
 }
-.mesurement{
+.measurement{
   display: grid;
-  grid-template-columns: repeat(2, 1fr ) ;
+  grid-template-columns: repeat(2,1fr) ;
   gap:10px;
-  width: 100%;
 }
-#height, #weight , #age, #sex, #activity{
-  height: 40px;
-  border-radius: 8px;
-  background: rgba(255, 255, 255, 0.145);
+.input{
+  height: 48px;
+  background-color: rgba(255, 255, 255, 0.1);
   border:none;
-  padding-left: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  color: rgba(255, 255, 255, 0.6);
 }
-#sex , #activity {
-  color:rgba(255, 255, 255, 0.367);
+::placeholder{
+  color:rgba(255, 255, 255, 0.6);
 }
+
 #activity{
   width: 100%;
   margin-top: 10px;
   margin-bottom: 20px;
-}
-.calculate{
-  margin-top:10px;
-  width: 224px;
-  height:50px;
 }
 option{
   color:black;
@@ -548,6 +538,7 @@ option{
   .bmi-calculator{
     width: 100%;
   }
+
   .trainer-content{
     grid-template-columns:repeat(1,1fr);
     place-items: center;
